chore: add lintstage hook

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint:eslint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.mts,.jsx,.tsx",
-    "lint:stylelint": "stylelint  '**/*.{css,scss,vue,html}'",
-    "lint": "npm run lint:eslint -- --fix && npm run lint:stylelint -- --fix",
+    "stylelint:fix": "stylelint '**/*.{css,scss,vue,html}' --fix",
+    "eslint:fix": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.mts,.jsx,.tsxx --fix --cache",
+    "eslint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts,.mts,.jsx,.tsx",
+    "stylelint": "stylelint  '**/*.{css,scss,vue,html}'",
+    "lint": "yarn stylelint -f json > stylelint-report.json && yarn eslint -f json -o eslint-report.json",
     "prepare": "husky"
   },
   "dependencies": {
@@ -27,6 +29,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.22.0",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "postcss-html": "^1.6.0",
     "prettier": "^3.2.5",
@@ -36,7 +39,6 @@
     "stylelint-config-recess-order": "^4.6.0",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.0.0",
-    "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-prettier": "^5.0.0",
     "stylelint-scss": "^6.1.0",
     "typescript": "^5.2.2",
